--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,16 +2,19 @@
   "env": {
     "browser": true,
     "es2021": true,
-    "node": true
+    "node": true,
+    "cypress/globals": true
   },
   "extends": ["plugin:react/recommended", "airbnb"],
+  "overrides": [],
   "parserOptions": {
     "ecmaFeatures": {
       "jsx": true
     },
-    "ecmaVersion": 12,
+    "ecmaVersion": "latest",
     "sourceType": "module"
   },
+  "plugins": ["react", "react-hooks", "cypress"],
   "rules": {
     "eol-last": "off",
     "linebreak-style": 0,
